# abt-snoozer

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: Makefile.subdir  basic-snoozer.c  basic-standard.c  sharedpool-snoozer.c  sharedpool-standard.c
include/: abt-snoozer.h
maint/: abt-snoozer.pc.in
src/: Makefile.subdir  abt-snoozer-internal.h  abt-snoozer.c  pool.c  sched.c  wq.c
tests/: Makefile.subdir  comparison.sh  multi-es-pool-mutex.c  spintest-barrier.c  spintest-barrier.sh  spintest-cond.c  spintest-cond.sh  spintest-eventual.c  spintest-eventual.sh  spintest-mutex.c  spintest-mutex.sh  spintest-suspend.c  spintest-suspend.sh  spintest-threadjoin.c  spintest-threadjoin.sh
